# snack_tracker_project

./: README.md  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: about.html  base.html  home.html  snack_detail.html  snack_list.html
