[tool.poetry]
name = "snack_tracker_project"
version = "0.1.0"
description = ""
authors = ["saadoundhirat <saadoundhirat93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
